# Games

./: .actionable_comments.json  .ci_trigger.py  .clang-format  .gitignore  .pr_details.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CRITICAL_BLOCKERS_REPORT.md  Dockerfile  HIGH_SEVERITY_ISSUES.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FORCE_FIELD_FIXES.md  PR_DESCRIPTION_SHIELD_FIX.md  Play Games.bat  README.md  SECURITY.md  SPEC.md  branch_cleanup_report_20251130_230848.md  conftest.py  convert_icon.py  cov.json  cov3.txt  cov_out.txt  cov_out10.txt  cov_out11.txt  cov_out12.txt  cov_out13.txt  cov_out14.txt  cov_out15.txt  cov_out16.txt  cov_out17.txt  cov_out18.txt  cov_out19.txt  cov_out2.txt  cov_out20.txt  cov_out21.txt  (+98 more)
.Jules/: palette.md
.agent/workflows/: lint.md
.benchmarks/: bench_basic.py
.cursor/rules/: .cursorrules.md
.github/: AGENTS.md  WORKFLOWS_PAUSED
.github/agents/: ci-cd-agent.md  docs-agent.md  git-workflow-agent.md  markdown-lint-agent.md  script-agent.md  security-agent.md
.github/workflows/: Bot-CI-Trigger.yml  Jules-Archivist.yml  Jules-Assessment-Generator.yml  Jules-Assessment-Remediator.yml  Jules-Auto-Assign-Issues.yml  Jules-Auto-Rebase.yml  Jules-Auto-Refactor.yml  Jules-Auto-Repair.yml  Jules-Cleaner.yml  Jules-Code-Quality-Fixer.yml  Jules-Code-Quality-Reviewer.yml  Jules-Completist.yml  Jules-Comprehensive-Assessment.yml  Jules-Consolidator.yml  Jules-Control-Tower.yml  Jules-Critics-Comments.yml  Jules-Curie.yml  Jules-Documentation-Auditor.yml  Jules-Documentation-Scribe.yml  Jules-Hotfix-Creator.yml  Jules-Hypatia.yml  Jules-Issue-Mention-Handler.yml  Jules-Issue-Resolver.yml  Jules-Laymans-Terms-Writer.yml  Jules-PR-AutoFix.yml  Jules-PR-Cleanup.yml  Jules-PR-Compiler.yml  Jules-Render-Healer.yml  Jules-Review-Fix.yml  Jules-Scientific-Auditor.yml  Jules-Sentinel.yml  Jules-Supersede-Check.yml  Jules-Tech-Custodian.yml  Jules-Test-Generator.yml  Jules-Thesis-Defender.yml  Maintenance-Global-Control.yml  Nightly-Doc-Organizer.yml  PR-Comment-Responder.yml  Pragmatic-Programmer-Review.yml  Verify-Issue-Closure.yml  (+14 more)
.hypothesis/constants/: 08dd591e99758e6e  547e1240957541f6  70ad10d93f432fcd  c2b3995eb166491c  da39a3ee5e6b4b0d  e170461d998b6110  f13cb58f831afbf7
.jules/: config.json  project.yml
.jules/completist_data/: abstract_methods.txt  not_implemented.txt  todo_markers.txt
.jules/review_data/: diffs.txt
.kiro/steering/: ci-local-testing.md
Doom/parent-doom-game/: README.md  game.js
Doom/zombie-doom-game/: README.md  index.html
Zombie_Game/Zombie_Game_v1/: main.js
Zombie_Game/Zombie_Game_v3/: README.md
Zombie_Game/Zombie_Game_v4/: main.js
Zombie_Game/Zombie_Game_v5/: README.md
assessments/: 2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  created_issues.json
assessments/issues/: EPIC-2026-04-26.md  P0-G-01.md  P0-I-02.md  P1-D-03.md  P1-E-06.md  P1-H-04.md  P1-H-05.md  P2-K-07.md
cov_annot2/: z_6751add74232c21c_raycaster.py,cover
cov_test3/: z_6751add74232c21c_raycaster.py,cover
docs/: Enemy Mesh Generation.md  Enemy_Behavior.md  Mesh_Best_Practices.md  testing.md
docs/adr/: README.md
docs/architecture/: JULES_ARCHITECTURE.md
docs/assessments/: 2026-04-26-a-o-assessment.json  2026-04-26-a-o-assessment.md  A-N_Assessment_2026-03-30.md  A-N_Assessment_2026-03-31.md  A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  A-N_Assessment_2026-04-12.md  A-N_Assessment_2026-04-14.md  A-N_Assessment_2026-04-17.md  A-N_Assessment_2026-04-18.md  A-N_Assessment_2026-04-20.md  A-N_Assessment_2026-04-21.md  A-N_Assessment_2026-04-22.md  ACTION_ITEMS.md  AUTO_FIXED.md  Assessment_A_Architecture.md  Assessment_A_Architecture_and_Implementation.md  Assessment_A_Category.md  Assessment_A_Code_Structure.md  Assessment_A_Results_2026-01-19.md  Assessment_A_Results_2026-01-22.md  Assessment_A_Results_2026-02-17.md  (+111 more)
games/: TETRIS_FEATURES.md  tetris.py
python/: requirements.txt
rrt_path_planner/: .gitignore
scripts/: __init__.py  analyze_completist_data.py  assessment_modules.py  baseline_assessments.py  create_issues_from_assessment.py  generate_assessment_summary.py  generate_issues_report.py  generate_quality_review.py  mypy_autofix_agent.py  mypy_fixers.py  perform_comprehensive_assessment.py  perform_detailed_assessment.py  pragmatic_programmer_review.py  quality_check.py  run_all_assessments.py  run_assessment.py  run_semgrep_precommit.py  setup_hooks.py
src/: contracts.py
src/games/QuatGolf/: CMakeLists.txt  README.md
src/games/QuatGolf/shaders/: basic.frag  basic.vert  particle_instanced.frag  particle_instanced.vert
src/games/QuatGolf/src/: main.cpp
src/games/QuatGolf/src/course/: CourseBuilder.h  Hole.h
src/games/QuatGolf/src/game/: Club.h
src/games/QuatGolf/src/physics/: BallPhysics.h
src/games/QuatGolf/src/terrain/: Surface.h  Terrain.h
src/games/shared/cpp/: CMakeLists.txt  README.md
src/games/shared/cpp/ai/: NavigationSystem.h
src/games/shared/cpp/audio/: AudioSystem.h
src/games/shared/cpp/core/: AABB.h  Entity.h  Projectile.h  Transform.h
src/games/shared/cpp/game/: Combat.h  Enemy.h  EnemyManager.h  ParticleSystem.h
src/games/shared/cpp/input/: Gamepad.h  InputAction.h  InputManager.h
src/games/shared/cpp/loader/: HumanoidEnemy.h  HumanoidRig.h  STLLoader.h  URDFLoader.h
src/games/shared/cpp/math/: Mat4.h  Quaternion.h  Vec3.h
src/games/shared/cpp/renderer/: Camera.h  GLLoader.h  Mesh.h  OBJLoader.h  Shader.h  Texture.h
src/games/shared/cpp/tests/: test_core_game_ai.cpp  test_loaders.cpp
tests/: __init__.py  conftest.py  test_analyze_completist_data.py  test_architecture_dbc.py  test_game_loop_integration.py  test_game_mechanics.py  test_game_mechanics_expanded.py  test_mypy_fixers.py  test_run_assessment.py  test_vendor_three_removed.py
tools/: code_quality_check.py  create_shortcut.ps1  create_shortcut.vbs  generate_enemies.py  generate_icons.py  scientific_auditor.py
(+732 files in other folders)
