[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "games"
version = "0.0.0"
description = "Game collection"
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["src"]
include = ["games*"]

[tool.ruff]
target-version = "py38"
select = ["E", "F", "B", "UP", "I"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring game subsystems",
]

[tool.coverage.run]
source = ["src/games/shared"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
]
