[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "games"
version = "0.0.0"
description = "Game collection"
requires-python = ">=3.10"
dependencies = [
    "pygame==2.6.1",
    "numpy>=2.0,<3",
    "opencv-python>=4.10,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "pytest-timeout>=2.4,<3",
    "mypy>=1.10,<2",
    "ruff>=0.6,<1",
    "types-PyYAML>=6.0,<7",
    "types-requests>=2.32,<3",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["games*"]

[tool.ruff]
target-version = "py310"
select = ["E", "F", "B", "UP", "I"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "-p", "no:benchmark",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring game subsystems",
]

[tool.coverage.run]
source = ["src/games/shared"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
]
