[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "games"
version = "0.1.0"
description = "Game collection"
requires-python = ">=3.10"
dependencies = [
    "pygame==2.6.1",
    "numpy>=2.0,<3",
    "opencv-python>=4.10,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "pytest-timeout>=2.4,<3",
    "mypy>=1.10,<2",
    "ruff>=0.6,<1",
    "types-PyYAML>=6.0,<7",
    "types-requests>=2.32,<3",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["games*"]

[tool.ruff]
target-version = "py310"
select = ["E", "F", "B", "UP", "I"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
# Fleet Testing Standards §2 — see Repository_Management/docs/FLEET_TESTING_STANDARDS.md
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
timeout = 60
timeout_method = "thread"

# Default lane: fast, deterministic, offline.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=20",
    "-p", "no:benchmark",
    "-p", "no:xvfb",
    "-m", "not slow and not live_simulation and not e2e and not requires_network",
]
markers = [
    # ---- tier markers ----
    "unit: pure logic, fully mocked, < 100 ms wall-clock",
    "integration: cross-module / file-system / process boundaries, < 5 s (also: marks tests requiring game subsystems)",
    "e2e: full-stack smoke tests; nightly + release gate only",
    "slow: > 1 s wall-clock; deselect with -m 'not slow'",
    "live_simulation: requires a real physics / math engine; deselect by default",

    # ---- environment markers ----
    "requires_network: needs real outbound network; deselect by default",
    "requires_gpu: needs CUDA / Metal / ROCm",
    "requires_gl: needs OpenGL or a display",
    "headless_safe: verified under SDL_VIDEODRIVER=dummy / QT_QPA_PLATFORM=offscreen",

    # ---- workflow markers ----
    "serial: must run with -n 0 (xdist parallel breaks this test)",
    "benchmark: deterministic perf smoke; not a primary correctness gate",
    "smoke: release-blocking smoke; subset of e2e",
]

filterwarnings = [
    # Suppress only third-party noise that's NOT a real correctness signal.
    # Never add a blanket "ignore::DeprecationWarning" — that hides real bugs.
]

[tool.coverage.run]
source = ["src/games/shared"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
# Fleet Testing Standards §6 — Experimental tier (multi-game collection: Duum,
# Force_Field, Wizard_of_Wor, Zombie_Survival, Tetris, Peanut_Butter_Panic, shared).
# 50% is the appropriate gate for a multi-game collection where coverage varies
# substantially across games. Phase 4 may tighten this once Phase 3 lands.
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
]

[tool.mypy]
exclude = [
    "(?i).*\\\\build\\\\.*",
    "(?i).*\\\\_deps\\\\.*",
    "(?i).*\\\\dist\\\\.*",
    "(?i).*/build/.*",
    "(?i).*/_deps/.*",
    "(?i).*/dist/.*",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-def", "var-annotated", "has-type", "attr-defined", "arg-type", "assignment", "return-value", "operator", "union-attr", "misc"]
